--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -15,22 +15,27 @@
   - name: create expense user
     ansible.builtin.user:
       name: expense
+   
+  - name: import tasks from common role
+    ansible.builtin.import_role:
+     name: common
+     tasks_from: app-pre-req
 
-  - name: create app directory
-    ansible.builtin.file:
-      path: /app
-      state: directory
+  # - name: create app directory
+  #   ansible.builtin.file:
+  #     path: /app
+  #     state: directory
 
-  - name: download the backend code
-    ansible.builtin.get_url:
-      url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
-      dest: /tmp/backend.zip
+  # - name: download the backend code
+  #   ansible.builtin.get_url:
+  #     url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+  #     dest: /tmp/backend.zip
 
-  - name: extract the code
-    ansible.builtin.unarchive:
-      src: /tmp/backend.zip #by default ansible thinks this is in ansible server
-      dest: /app
-      remote_src: yes
+  # - name: extract the code
+  #   ansible.builtin.unarchive:
+  #     src: /tmp/backend.zip #by default ansible thinks this is in ansible server
+  #     dest: /app
+  #     remote_src: yes
 
   - name: install dependencies 
     ansible.builtin.command: npm install  # here it means we're installing the dependency in package.json in nodejs loaction.thats y we 'have to change the dir where the package.json is  present.in our case its in app directory.
