--- a/roles/common/tasks/app-pre-req.yaml
+++ b/roles/common/tasks/app-pre-req.yaml
@@ -1,16 +1,16 @@
-- name: remove existing app location 
-  ansible.builtin.file:   #file module is used to remove a file/path
-   path: "{{ app_location }}"
-   state: absent
+- name: remove existing app location
+  ansible.builtin.file:
+    path: "{{ app_location }}"
+    state: absent
   ignore_errors: true
 
 - name: create app directory
   ansible.builtin.file:
-      path: "{{ app_location }}"
-      state: directory
+    path: "{{ app_location }}"
+    state: directory
 
 - name: "download the {{ component }} code"
   ansible.builtin.unarchive:
-      url: "https://expense-builds.s3.us-east-1.amazonaws.com/expense-{{ component }}-v2.zip"
-      dest:  "{{ app_location }}"
-      remote_src: yes    
+    src: "https://expense-builds.s3.us-east-1.amazonaws.com/expense-{{ component }}-v2.zip"
+    dest: "{{ app_location }}"
+    remote_src: yes
